wacc/test/golden/semanticErr.function.doubleArgDef
# functions cannot define the same argument twice

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int foo(int x, int x) is
  return x
  end

  skip
end

Semantic error in test/wacc_examples/invalid/semanticErr/function/doubleArgDef.wacc (line 12, column 7):
"x" was already defined in (12,7).
> begin
>   int foo(int x, int x) is
>       ^
>   return x

